# it-myprompt

./: .env-example  ARQUITETURA.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
it_myprompt/: app.py  database.py  logger.py  models.py  security.py  settings.py
it_myprompt/routes/: auth.py  chat.py  users.py
it_myprompt/schemas/: chat.py  user.py
it_myprompt/services/: openrouter.py
migrations/: env.py
migrations/versions/: cfdcfb8672fd_create_tables.py
tests/: conftest.py  test_auth.py  test_chat.py  test_users.py
